[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/UI/interactive/MelonManager.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/UI/utility/butts/SellButt.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/DungeonFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/UI/utility/butts/Arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/butts/targeting.png" type="Texture" id=5]
[ext_resource path="res://assets/towers/range.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=3]
radius = 165.0
height = 70.0

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 20
extra_spacing_bottom = -2
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="MelonManager" type="Control"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pos" type="Position2D" parent="UI"]

[node name="Area2D" type="Area2D" parent="UI/Pos"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Pos/Area2D"]
shape = SubResource( 3 )

[node name="CurrRange" type="Sprite" parent="UI/Pos"]
texture = ExtResource( 9 )

[node name="NextRange" type="Sprite" parent="UI/Pos"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 9 )

[node name="HUD" type="VBoxContainer" parent="UI/Pos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -160.0
margin_right = 200.0
margin_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 140, 330 )

[node name="UpgradeBar" type="HBoxContainer" parent="UI/Pos/HUD"]
margin_left = 110.0
margin_right = 290.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 180, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 15
alignment = 1

[node name="Melon" type="Control" parent="UI/Pos/HUD"]
margin_left = 160.0
margin_top = 84.0
margin_right = 240.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BaseActions" type="VBoxContainer" parent="UI/Pos/HUD"]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 342.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="TargetingBar" type="VBoxContainer" parent="UI/Pos/HUD/BaseActions"]
margin_right = 400.0
margin_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -50
alignment = 1

[node name="Targeting" type="HBoxContainer" parent="UI/Pos/HUD/BaseActions/TargetingBar"]
margin_right = 400.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="ToLeft" parent="UI/Pos/HUD/BaseActions/TargetingBar/Targeting" instance=ExtResource( 4 )]
margin_right = 60.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="UI/Pos/HUD/BaseActions/TargetingBar/Targeting"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "66666666666666666"
align = 1
valign = 1

[node name="ToRight" parent="UI/Pos/HUD/BaseActions/TargetingBar/Targeting" instance=ExtResource( 4 )]
margin_left = 340.0
margin_right = 400.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
flip_h = true

[node name="TextUnderline" type="TextureRect" parent="UI/Pos/HUD/BaseActions/TargetingBar"]
margin_top = 10.0
margin_right = 400.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 80 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="SellBar" type="HBoxContainer" parent="UI/Pos/HUD/BaseActions"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 80 )
alignment = 1

[node name="SellButt" parent="UI/Pos/HUD/BaseActions/SellBar" instance=ExtResource( 2 )]
margin_left = 170.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 70.0

[connection signal="mouse_exited" from="UI/Pos/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="UI/Pos/HUD/BaseActions/SellBar/SellButt" to="." method="_on_SellButt_mouse_entered"]
[connection signal="mouse_exited" from="UI/Pos/HUD/BaseActions/SellBar/SellButt" to="." method="_on_SellButt_mouse_exited"]
[connection signal="pressed" from="UI/Pos/HUD/BaseActions/SellBar/SellButt" to="." method="_on_SellButt_pressed"]
